v2ray-1.7 更新android端教程

--- a/v2ray/v2ray_tutorial.html
+++ b/v2ray/v2ray_tutorial.html
@@ -27,7 +27,7 @@
                 <section>
                     <h5>Step-1 下载并解压v2rayN客户端</h5>
                     <p>
-                        老规矩，先放github项目<a href="https://github.com/2dust/v2rayN" target="_blank">链接</a>,会用github的自己去release里下载
+                        老规矩，先放github项目<a href="https://github.com/2dust/v2rayN" target="_blank">链接</a>，会用github的自己去release里下载
                     </p>
                     <p>
                         也可以从我的服务器上获取，<a href="/v2ray/clients/v2rayN-Core.zip">点此下载</a>4.12版本
@@ -36,7 +36,7 @@
                 <section>
                     <h5>Step-2 订阅</h5>
                     <p>启动v2rayN.exe</p>
-                    <p>订阅-->订阅设置-->备注随便填&订阅链接粘贴过去-->确定</p>
+                    <p>订阅-->订阅设置-->添加-->备注随便填&订阅链接粘贴过去-->确定</p>
                     <p>订阅-->更新订阅</p>
                 </section>
                 <section>
@@ -53,21 +53,25 @@
                 </section>
                 <section>
                     <h5>Step-6 测试</h5>
-                    <p>访问<a href="https://google.com" target="_blank"> Google </a>或
-                        <a href="https://youtube.com" target="_blank">Youtube </a>以测试是否配置正确</p>
+                    <p>访问<a href="https://google.com" target="_blank"> Google (https://google.com) </a>或
+                        <a href="https://youtube.com" target="_blank">Youtube (https://youtube.com) </a>以测试是否配置正确</p>
                     <p>正确-->Enjoy Yourself Outside the GFW</p>
                     <p>错误-->切换节点重试</p>
                 </section>
             </section>
             <section class="my-4">
                 <h2>IOS端</h2>
+                <p>先去非国区的AppStore下载Shadowrocket</p>
                 <p>Shadowrocket主页面-->右上角+号-->类型-->Subscribe-->URL直接粘贴订阅链接&备注随便填-->完成</p>
-                <p>单击某行节点进行切换-->测试Google或Youtube-->Enjoy</p>
+                <p>单击某行节点进行切换-->测试Google或Youtube</p>
             </section>
             <section class="my-4">
                 <h2>Android端</h2>
-                <p>没有Android设备，没有教程</p>
-                <p>可以去Google一下别人写的 v2rayNG 的使用教程</p>
+                <p>1. 下载v2rayNG客户端，github项目<a href="https://github.com/2dust/v2rayNG" target="_blank">链接</a>，或者从服务器上直接<a
+                        href="/v2ray/clients/v2rayNG.apk">下载</a>1.5.15版本的APK文件</p>
+                <p>2. 启动v2rayNG，点击主界面左上角三条横线-->订阅设置-->右上角+号-->备注随便填&地址粘贴订阅链接-->右上角完成</p>
+                <p>3. 点击主界面右上角三个点-->更新订阅</p>
+                <p>4. 选择节点-->点击右下角V字图标启动v2rayNG</p>
             </section>
         </article>
     </div>
